[project]
name = "sp-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "joblib>=1.5.3",
    "networkit>=11.2.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
]
