[project]
name = "sp-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.0",
    "networkit>=11.2.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
]
